Pre/postprocessors after content change
If applied, this commit will include the preprocessor and postprocessor on the active css file, after the changes to the formatting to change the content from placeholder to real content. No different changes from the css\style-grid.css.

--- a/css/style-grid.production.css
+++ b/css/style-grid.production.css
@@ -151,6 +151,11 @@ hr {
   grid-column: 1 / span 3;
 }
 
+.LinkedIn,
+.github {
+  text-decoration: none;
+}
+
 body {
   font-family: "EB Garamond", serif;
   font-weight: 500;
@@ -200,14 +205,12 @@ a:focus {
 }
 
 /*INDEX PAGE SPECIFIC*/
-.work-link {
-  text-align: center;
-}
 
 .profile,
 .about-me {
   max-width: 700px;
   margin: 0 auto;
+  text-align: justify;
 }
 
 .profile_portrait {
@@ -215,7 +218,7 @@ a:focus {
   width: 250px;
   height: auto;
   height: 30%;
-  margin-right: 40px;
+  margin: 30px 40px 0px 0px;
   border-radius: 50%;
 }
 /*INDEX PAGE SPECIFIC END*/
@@ -282,8 +285,17 @@ a:focus {
 
 /*ABOUT ME PAGE SPECIFIC*/
 table {
+  border: 0.5px solid #292931;
   margin: 0 auto;
   margin-bottom: 50px;
+  padding: 15px;
+}
+
+td,
+th {
+  border-spacing: 5px;
+  padding: 5px;
+  text-align: center;
 }
 
 .location-picture {
