--- a/css/style-grid.css
+++ b/css/style-grid.css
@@ -279,6 +279,12 @@ th {
 /*PROJECTS PAGE SPECIFIC END*/
 
 /*RESPONSIVENESS*/
+@media all and (min-width: 360px) and (max-width: 550px) {
+  .profile_portrait {
+    float: none;
+  }
+}
+
 @media all and (max-width: 550px) {
   .page-header {
     grid-template-columns: 1fr;
