update style sheet
If committed, additional value added to smallest @media query will add header compatibility to 320px screen. This will stop the scrolling feature in the header.

--- a/css/style-grid.css
+++ b/css/style-grid.css
@@ -282,6 +282,9 @@ th {
 
 /*RESPONSIVENESS*/
 @media all and (min-width: 300px) and (max-width: 400px) {
+  .navigation-list {
+    padding: 0;
+  }
   p {
     font-size: var(--minimize-font);
   }
