--- a/css/style-grid.css
+++ b/css/style-grid.css
@@ -280,6 +280,19 @@ th {
 }
 /*PROJECTS PAGE SPECIFIC END*/
 
+/*CONTACT PAGE SPECIFIC*/
+.contact {
+  text-align: center;
+}
+
+#your-name,
+#contact-email,
+#contact-message {
+  padding: 5px 10px;
+}
+
+/*CONTACT PAGE SPECIFIC END*/
+
 /*RESPONSIVENESS*/
 @media all and (min-width: 300px) and (max-width: 400px) {
   .navigation-list {
