--- a/css/style-grid.css
+++ b/css/style-grid.css
@@ -285,6 +285,14 @@ th {
   text-align: center;
 }
 
+.form-container {
+  padding: 15px 10px;
+  max-width: 700px;
+  margin: 0 auto;
+  background-color: rgba(72, 72, 78, 0.5);
+  border-radius: 7%;
+}
+
 #your-name,
 #contact-email,
 #contact-message {
