--- a/css/style-grid.css
+++ b/css/style-grid.css
@@ -273,6 +273,7 @@ th {
   /*Dark Accent Color*/
   border-radius: 7%;
   background-color: rgba(72, 72, 78, 0.5);
+  padding: 15px 15px 40px 15px;
 }
 
 .grid_item:hover {
