--- a/css/style-grid.css
+++ b/css/style-grid.css
@@ -348,6 +348,20 @@ th {
 /*CONTACT PAGE SPECIFIC END*/
 
 /*RESPONSIVENESS*/
+@supports (display: grid) {
+  /*This is where you define each instance of grid if needed */
+  .page-header {
+    display: grid;
+  }
+}
+
+@supports not (display: grid) {
+  /*Define each use of grid from above again, and detail the fallback layout*/
+  .page-header {
+    display: flex;
+  }
+}
+
 @media all and (min-width: 300px) and (max-width: 400px) {
   .navigation-list {
     padding: 0;
