--- a/css/style-grid.production.css
+++ b/css/style-grid.production.css
@@ -37,6 +37,7 @@ Bright Accent Color (Bright Teal): 0EC1AB
   align-items: center;
   justify-items: center;
   overflow: auto;
+  border-bottom: 2px solid #0ec1ab;
 }
 
 .page-header > *:nth-child(1) {
@@ -224,22 +225,6 @@ a:focus {
 }
 /*INDEX PAGE SPECIFIC END*/
 
-.submit-button {
-  border: none;
-  display: inline-block;
-  font-family: "EB Garamond", serif;
-  font-size: 22px;
-  color: #292931;
-  background-color: #ffffff;
-  text-decoration: none;
-  padding: 10px;
-  margin: 0 auto;
-  border-radius: 5px;
-  border: 3px solid #0ec1ab;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
 .cv-button {
   border: none;
   display: inline-block;
@@ -249,7 +234,7 @@ a:focus {
   background-color: #ffffff;
   text-decoration: none;
   padding: 10px;
-  margin: 0 auto;
+  margin: 40px auto;
   border-radius: 5px;
   border: 3px solid #0ec1ab;
   -webkit-transition: all 0.5s ease;
@@ -285,10 +270,14 @@ a:focus {
 }
 
 /*ABOUT ME PAGE SPECIFIC*/
+.bio {
+  display: inline-block;
+  margin-bottom: 15px;
+}
+
 table {
   border: 0.5px solid #292931;
   margin: 0 auto;
-  margin-bottom: 50px;
   padding: 15px;
 }
 
@@ -425,6 +414,7 @@ th {
   /*Dark Accent Color*/
   border-radius: 7%;
   background-color: rgba(72, 72, 78, 0.5);
+  padding: 15px 15px 40px 15px;
 }
 
 .grid_item:hover {
@@ -437,12 +427,54 @@ th {
   text-align: center;
 }
 
+.my-address_name,
+.my-address_street,
+.my-address_city,
+.my-address_country,
+.contact-me_phone,
+.contact-me_skype,
+.contact-me_email,
+.contact-me_link {
+  display: block;
+}
+
+.my-address_country {
+  margin-bottom: 15px;
+}
+
+.contact-me_link {
+  margin: 40px 0px;
+}
+
 .form-container {
   padding: 15px 10px;
   max-width: 700px;
   margin: 0 auto;
   background-color: rgba(72, 72, 78, 0.5);
   border-radius: 7%;
+}
+
+.form-name,
+.form-email,
+.form-message {
+  display: block;
+  margin: 15px;
+}
+
+.submit-button {
+  display: block;
+  margin: 30px auto 15px auto;
+  border: none;
+  font-family: "EB Garamond", serif;
+  font-size: 22px;
+  color: #292931;
+  background-color: #ffffff;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  border: 3px solid #0ec1ab;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 #your-name,
@@ -454,6 +486,23 @@ th {
 /*CONTACT PAGE SPECIFIC END*/
 
 /*RESPONSIVENESS*/
+@supports (display: grid) {
+  /*This is where you define each instance of grid if needed */
+  .page-header {
+    display: -ms-grid;
+    display: grid;
+  }
+}
+
+@supports not (display: grid) {
+  /*Define each use of grid from above again, and detail the fallback layout*/
+  .page-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 @media all and (min-width: 300px) and (max-width: 400px) {
   .navigation-list {
     padding: 0;
