--- a/css/style-grid.css
+++ b/css/style-grid.css
@@ -269,6 +269,7 @@ th {
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   grid-gap: var(--primary-grid-gap);
   text-align: center;
 }
